--- a/SensorNodeTestSuite.cfg
+++ b/SensorNodeTestSuite.cfg
@@ -89,9 +89,9 @@ var Error = xdc.useModule("xdc.runtime.Error");
  *  - Error.policyMin
  *      Lightweight policy function that does minimum processing and returns.
  */
-//Error.policyFxn = Error.policyDefault;
+Error.policyFxn = Error.policyDefault;
 //Error.policyFxn = Error.policySpin;
-Error.policyFxn = Error.policyMin;
+// Error.policyFxn = Error.policyMin;
 
 /*
  * If Error.policyFxn is set to Error.policyDefault, this function is called
@@ -107,8 +107,8 @@ Error.policyFxn = Error.policyMin;
  *      Errors invoke custom user function. See the Error module documentation
  *      for more details.
  */
-//Error.raiseHook = Error.print;
-Error.raiseHook = null;
+Error.raiseHook = Error.print;
+// Error.raiseHook = null;
 //Error.raiseHook = "&myErrorFxn";
 
 /*
@@ -118,7 +118,7 @@ Error.raiseHook = null;
  * could lead to a stack overflow.
  * The default value is 16.
  */
-Error.maxDepth = 2;
+// Error.maxDepth = 2;
 
 /* ================ Hwi configuration ================ */
 var halHwi = xdc.useModule("ti.sysbios.hal.Hwi");
@@ -134,8 +134,8 @@ var m3Hwi = xdc.useModule("ti.sysbios.family.arm.m3.Hwi");
  *      Disabling the runtime check improves runtime performance and yields a
  *      reduced flash footprint.
  */
-//halHwi.checkStackFlag = true;
-halHwi.checkStackFlag = false;
+halHwi.checkStackFlag = true;
+// halHwi.checkStackFlag = false;
 
 /*
  * The following options alter the system's behavior when a hardware exception
@@ -236,8 +236,8 @@ BIOS.includeXdcRuntime = true;
  *      single-step through APIs with a debugger.
  *
  */
-BIOS.libType = BIOS.LibType_Custom;
-//BIOS.libType = BIOS.LibType_Debug;
+// BIOS.libType = BIOS.LibType_Custom;
+BIOS.libType = BIOS.LibType_Debug;
 
 /*
  * Runtime instance creation enable flag.
@@ -271,7 +271,7 @@ BIOS.runtimeCreatesEnabled = true;
  *      This option must be set to false.
  */
 //BIOS.logsEnabled = true;
-BIOS.logsEnabled = false;
+BIOS.logsEnabled = true;
 
 /* ================ Memory configuration ================ */
 var Memory = xdc.useModule("xdc.runtime.Memory");
@@ -305,7 +305,8 @@ Program.global.HEAPMGR_SIZE = 0;
  *  of the system stack size to be determined in the example's
  *  linker command file.
  */
-Program.stack = 1600;
+// Program.stack = 1600;
+Program.stack = 32768;
 
 /*
  * Uncomment to enable Semihosting for GNU targets to print to the CCS console.
@@ -320,8 +321,8 @@ if (Program.build.target.$name.match(/gnu/)) {
 /*
  * To use BIOS in flash, comment out the code block below.
  */
-var ROM = xdc.useModule("ti.sysbios.rom.ROM");
-ROM.romName = ROM.CC13X2V2;
+// var ROM = xdc.useModule("ti.sysbios.rom.ROM");
+// ROM.romName = ROM.CC13X2V2;
 
 /* ================ Semaphore configuration ================ */
 var Semaphore = xdc.useModule("ti.sysbios.knl.Semaphore");
@@ -338,7 +339,7 @@ var Semaphore = xdc.useModule("ti.sysbios.knl.Semaphore");
  *      This option must be set to false.
  */
 //Semaphore.supportsPriority = true;
-Semaphore.supportsPriority = false;
+Semaphore.supportsPriority = true;
 
 /*
  * Allows for the implicit posting of events through the semaphore,
